--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,9 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.17.8
+  firebase_core: ^2.27.0
   flutter:
     sdk: flutter
   go_router: ^13.2.0
+  curved_navigation_bar: ^1.0.3
+  modal_progress_hud_nsn: ^0.5.0
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
 
