--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.3
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.3
   firebase_auth: ^4.17.8
   firebase_core: ^2.27.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.4
+  font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
-  curved_navigation_bar: ^1.0.3
   modal_progress_hud_nsn: ^0.5.0
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
