--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_slidable: ^3.1.0
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   modal_progress_hud_nsn: ^0.5.0
