--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
   modal_progress_hud_nsn: ^0.5.0
+  provider: ^6.1.2
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
 
