--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ dependencies:
   bloc: ^8.1.3
   cupertino_icons: ^1.0.2
   curved_navigation_bar: ^1.0.3
+  device_preview: ^1.1.0
+  dio: ^5.4.3+1
   firebase_auth: ^4.17.8
   firebase_core: ^2.27.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.4
+  flutter_screenutil: ^5.9.0
   flutter_slidable: ^3.1.0
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
