--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,16 @@ dependencies:
   flutter_slidable: ^3.1.0
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   modal_progress_hud_nsn: ^0.5.0
   provider: ^6.1.2
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  hive_generator: ^2.0.1
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
